syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.hongxi.lightrpc.rpc.grpc.service";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service HelloService {
  // Sends a greeting
  rpc sayHello (HelloRequest) returns (HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}